<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>scm</groupId>
    <artifactId>scm-wip</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>scm-wip-backstage</name>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
        <project.location>${basedir}</project.location>
        <mapper.version>3.3.6</mapper.version>
        <csb.version>2.0.5</csb.version>
        <csb.snap.version>2.0.6-SNAPSHOT</csb.snap.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
    </properties>


    <dependencies>
        <dependency>
            <groupId>com.cvte.csb</groupId>
            <artifactId>csb-core</artifactId>
            <version>${csb.version}</version>
        </dependency>

        <dependency>
            <groupId>com.cvte.csb</groupId>
            <artifactId>csb-web</artifactId>
            <version>${csb.version}</version>
        </dependency>

        <dependency>
            <groupId>com.cvte.csb</groupId>
            <artifactId>csb-jdbc</artifactId>
            <version>${csb.version}</version>
        </dependency>

        <dependency>
            <groupId>com.cvte.csb</groupId>
            <artifactId>csb-config</artifactId>
            <version>${csb.version}</version>
        </dependency>

        <dependency>
            <groupId>com.cvte.csb</groupId>
            <artifactId>csb-test</artifactId>
            <version>${csb.version}</version>
        </dependency>

        <dependency>
            <groupId>com.cvte.csb</groupId>
            <artifactId>csb-cache</artifactId>
            <version>${csb.version}</version>
        </dependency>

        <dependency>
            <groupId>com.cvte.csb</groupId>
            <artifactId>csb-job</artifactId>
            <version>${csb.version}</version>
        </dependency>

        <dependency>
            <groupId>com.cvte.csb</groupId>
            <artifactId>csb-msg</artifactId>
            <version>${csb.version}</version>
        </dependency>

        <dependency>
            <groupId>com.cvte.csb</groupId>
            <artifactId>csb-store</artifactId>
            <version>${csb.version}</version>
        </dependency>

        <dependency>
            <groupId>com.cvte.csb</groupId>
            <artifactId>csb-wfp-api-sdk</artifactId>
            <version>1.1-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.cvte.csb</groupId>
            <artifactId>csb-jwt-sdk</artifactId>
            <version>${csb.version}</version>
        </dependency>


        <dependency>
            <groupId>com.cvte.csb</groupId>
            <artifactId>csb-log-admin</artifactId>
            <version>${csb.version}</version>
        </dependency>


        <dependency>
            <groupId>com.cvte.csb</groupId>
            <artifactId>csb-cloud</artifactId>
            <version>${csb.snap.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-actuator</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-annotations</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-databind</artifactId>
                </exclusion>
                <exclusion>
                    <artifactId>httpclient</artifactId>
                    <groupId>org.apache.httpcomponents</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.cvte.csb</groupId>
            <artifactId>csb-validate</artifactId>
            <version>${csb.version}</version>
        </dependency>

        <dependency>
            <groupId>com.cvte.csb</groupId>
            <artifactId>csb-base</artifactId>
            <version>${csb.version}</version>
        </dependency>

        <dependency>
            <groupId>com.cvte.csb</groupId>
            <artifactId>csb-iac</artifactId>
            <version>1.1.3</version>
        </dependency>

        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>1.9.3</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.4</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>3.17</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>3.17</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>nexus</id>
            <name>nexus</name>
            <url>http://mvn.gz.cvte.cn/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>nexus-releases</id>
            <name>CVTE-Release-Repository</name>
            <url>http://mvn.gz.cvte.cn/nexus/content/repositories/releases/</url>
            <releases>
                <updatePolicy>always</updatePolicy>
                <enabled>true</enabled>
            </releases>
        </repository>
        <repository>
            <id>nexus-snapshots</id>
            <name>CVTE-snapshots-Repository</name>
            <url>http://mvn.gz.cvte.cn/nexus/content/repositories/snapshots/</url>
            <snapshots>
                <updatePolicy>always</updatePolicy>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>jfrog-releases</id>
            <name>artifactory-releases</name>
            <url>https://artifactory.gz.cvte.cn:443/artifactory/SR_maven_releases_local/</url>
        </pluginRepository>
        <pluginRepository>
            <id>jfrog-snapshots</id>
            <name>artifactory-snapshots</name>
            <url>https://artifactory.gz.cvte.cn:443/artifactory/SR_maven_snapshots_local</url>
        </pluginRepository>
        <pluginRepository>
            <id>nexus</id>
            <name>nexus</name>
            <url>http://mvn.gz.cvte.cn/nexus/content/groups/public/</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <finalName>${project.artifactId}</finalName>

        <resources>
            <resource>
                <targetPath>${project.build.directory}/classes</targetPath>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.xml</include>
                    <include>**/*.yml</include>
                </includes>
            </resource>
            <resource>
                <targetPath>${project.build.directory}/classes</targetPath>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>*.yml</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources/profiles/${profiles.active}</directory>
                <targetPath>${project.build.directory}/classes</targetPath>
                <excludes>
                    <exclude>profiles/**</exclude>
                </excludes>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>

            <!-- Support our own plugin -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>2.0.1.RELEASE</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>com.cvte.scm.pms.boot.Bootstrap</mainClass>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.4.3</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>


            <!-- 此插件用来生成通用mapper的代码 -->
            <plugin>
                <groupId>com.cvte.csb</groupId>
                <artifactId>csb-generator</artifactId>
                <version>1.0.4</version>
                <configuration>
                    <!-- 输出目录(默认java.io.tmpdir) -->
                    <outputDir>src/main/java</outputDir>
                    <!-- 是否覆盖同名文件(默认false) -->
                    <fileOverride>false</fileOverride>
                    <!-- mapper.xml 中添加二级缓存配置(默认true) -->
                    <enableCache>false</enableCache>
                    <!-- 开发者名称 -->
                    <author>author</author>
                    <!-- 数据源配置，(必配) -->
                    <dataSource>
                        <driverName>oracle.jdbc.driver.OracleDriver</driverName>
                        <url>jdbc:oracle:thin:@erptest-db.gz.cvte.cn:1531/erptest</url>
                        <username>xxnewsrm</username>
                        <password>Xxnewsrm#2O19</password>
                    </dataSource>
                    <strategy>
                        <!-- 表名生成策略，四种类型，从名称就能看出来含义
                        nochange(默认),
                        underline_to_camel,
                        remove_prefix,
                        remove_prefix_and_camel -->
                        <tableNaming>underline_to_camel</tableNaming>

                        <!-- 字段生成策略，四种类型，从名称就能看出来含义
                        nochange(默认),
                        underline_to_camel,
                        remove_prefix,
                        remove_prefix_and_camel -->
                        <naming>underline_to_camel</naming>
                        <!--Entity中的ID生成策略（默认 auto）
                        <idGenType>uuid</idGenType>
                        -->
                        <!-- 要包含的表 与exclude 二选一配置-->
                        <include>
                            <property>pms_vendor_org_info_ext</property>
                        </include>
                        <!-- 要排除的表 -->
                        <!--<exclude>-->
                        <!--<property>schema_version</property>-->
                        <!--<property>schema_version</property>-->
                        <!--</exclude>-->
                    </strategy>
                    <packageInfo>
                        <!-- 父级包名称，如果不写，下面的service等就需要写全包名(默认com.cvte.csb) -->
                        <parent>com.cvte.scm.pms.vendor.core</parent>
                        <!--service包名(默认service)-->
                        <service>service</service>
                        <!--serviceImpl包名(默认service.impl)-->
                        <serviceImpl>service.impl</serviceImpl>
                        <!--entity包名(默认entity)-->
                        <entity>entity</entity>
                        <!--mapper包名(默认mapper)-->
                        <mapper>mapper</mapper>
                        <!--xml包名(默认mapper.xml)-->
                        <xml>resources.mapper.oracle.vendor</xml>
                    </packageInfo>
                </configuration>
                <dependencies>
                    <!--<dependency>-->
                    <!--<groupId>mysql</groupId>-->
                    <!--<artifactId>mysql-connector-java</artifactId>-->
                    <!--<version>5.1.38</version>-->
                    <!--</dependency>-->
                    <dependency>
                        <groupId>com.oracle</groupId>
                        <artifactId>ojdbc6</artifactId>
                        <version>11.2.0.3</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19</version>
                <configuration>
                    <argLine>-XX:MaxPermSize=512m</argLine>
                    <skipTests>false</skipTests>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit4</artifactId>
                        <version>2.19</version>
                    </dependency>
                    <dependency>
                        <groupId>ch.qos.logback</groupId>
                        <artifactId>logback-classic</artifactId>
                        <version>1.0.13</version>
                    </dependency>
                    <dependency>
                        <groupId>ch.qos.logback</groupId>
                        <artifactId>logback-core</artifactId>
                        <version>1.0.13</version>
                    </dependency>
                </dependencies>
            </plugin>

        </plugins>


    </build>

</project>